--- a/lect-javafx/src/main/resources/css/media-track-selection.css
+++ b/lect-javafx/src/main/resources/css/media-track-selection.css
@@ -6,6 +6,25 @@
 	-fx-fill: #8B5CF6CC;
 	-fx-stroke: #A78BFA;
 }
+.media-track-selection > .close-button {
+	-fx-background-color: #C4B5FD;
+	-fx-background-insets: 0;
+	-fx-background-radius: 0;
+	-fx-padding: 0;
+}
+.media-track-selection > .close-button > SvgIcon {
+	-fx-icon-content-width: 100;
+	-fx-icon-content-height: 100;
+	-fx-icon-fill: #8B5CF6;
+	-fx-icon-size: 2em;
+	-fx-padding: 0;
+}
+.media-track-selection > .close-button:hover {
+	-fx-background-color: #C4B5FDAA;
+}
+.media-track-selection > .close-button:pressed {
+	-fx-background-color: #C4B5FDEE;
+}
 .media-track-selection > .selection-slider > .slider-line {
 	-fx-stroke: #A78BFA;
 	-fx-stroke-width: 1;
@@ -21,6 +40,9 @@
 	-fx-icon-size: 2em;
 	-fx-background-color: null;
 	-fx-padding: 0;
+}
+.media-track-selection > .close-button > .close-icon {
+	-fx-icon-content: "M20.057 15a5 5 0 00-3.592 1.465 5 5 0 000 7.072L42.928 50 16.465 76.464a5 5 0 000 7.071 5 5 0 007.072 0L50 57.072l26.463 26.463a5 5 0 007.072 0 5 5 0 000-7.071L57.072 50l26.463-26.463a5 5 0 000-7.072 5 5 0 00-7.072 0L50 42.928 23.537 16.465A5 5 0 0020.057 15z";
 }
 .media-track-selection > .selection-slider:left > .slider-thumb {
 	-fx-icon-content: "M 18.5,2.5 c 1.1,0 2,0.9 2,2 v 17 l -7,-6 h -8 c -1.1,0 -2,-0.9 -2,-2 v -9 c 0,-1.1 0.9,-2 2,-2 z M 6.773438,5.2675781 H 6.666016 v 7.4374999 h 0.107422 z m 3.24414,0.00195 H 9.910156 v 7.4355468 h 0.107422 z";
