--- a/lect-editor-fx/src/main/resources/views/about/about.fxml
+++ b/lect-editor-fx/src/main/resources/views/about/about.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -17,6 +18,27 @@
 
 <fx:root type="ContentPane" title="%about.title" styleClass="about" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
 	<TabPane styleClass="content" tabClosingPolicy="UNAVAILABLE" VBox.vgrow="ALWAYS">
+		<Tab text="%about.info">
+			<VBox styleClass="tab-content">
+				<Label fx:id="versionLabel">
+					<VBox.margin>
+						<Insets bottom="3.0" />
+					</VBox.margin>
+				</Label>
+				<Label fx:id="buildDateLabel">
+					<VBox.margin>
+						<Insets bottom="10.0" />
+					</VBox.margin>
+				</Label>
+				<Hyperlink fx:id="websiteLink" />
+				<Label>
+					<VBox.margin>
+						<Insets bottom="3.0" />
+					</VBox.margin>
+				</Label>
+				<Hyperlink fx:id="issueLink" text="%about.info.issue" />
+			</VBox>
+		</Tab>
 		<Tab text="%about.contributors">
 			<VBox styleClass="tab-content" spacing="10.0">
 				<FlowPane fx:id="sponsorList" styleClass="sponsors-container" hgap="10.0" vgap="10.0" />
