editor: replace page feature

--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
@@ -52,6 +52,14 @@
 					<SvgIcon styleClass="delete-page-icon"/>
 				</graphic>
 			</Button>
+			<Button fx:id="replacePageButton">
+				<tooltip>
+					<Tooltip text="%media.replace.page" />
+				</tooltip>
+				<graphic>
+					<SvgIcon styleClass="replace-page-icon"/>
+				</graphic>
+			</Button>
 			<Button fx:id="importRecordingButton">
 				<tooltip>
 					<Tooltip text="%media.import.recording" />
