editor: save document to PDF feature

--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu.fxml
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu.fxml
@@ -11,6 +11,7 @@
 		<MenuItem fx:id="openRecordingMenuItem" accelerator="shortcut+o" text="%menu.open" />
 		<MenuItem fx:id="closeRecordingMenuItem" accelerator="shortcut+f4" text="%menu.close" />
 		<SeparatorMenuItem />
+		<MenuItem fx:id="saveDocumentMenuItem" text="%menu.save.document" />
 		<MenuItem fx:id="saveRecordingAsMenuItem" text="%menu.save.as" />
 		<SeparatorMenuItem />
 		<MenuItem fx:id="exportAudioMenuItem" text="%menu.export.audio" />
