--- a/lect-javafx/src/main/resources/css/screen-capture-timeline.css
+++ b/lect-javafx/src/main/resources/css/screen-capture-timeline.css
@@ -1,5 +1,5 @@
 .screen-capture-timeline {
     -fx-screen-capture-timeline-background: derive(-fx-background, -4%);
-    -fx-screen-capture-timeline-text-color: -fx-mid-text-color;
-    -fx-screen-capture-timeline-segment-mark-color: #73f565;
+    -fx-screen-capture-timeline-text-color: #ffffff;
+    -fx-screen-capture-timeline-segment-mark-color: #0a4244;
 }
