--- a/lect-presenter-fx/src/main/resources/views/quiz-option/quiz-option.fxml
+++ b/lect-presenter-fx/src/main/resources/views/quiz-option/quiz-option.fxml
@@ -9,7 +9,7 @@
 	<children>
 		<HBox fx:id="content" styleClass="quiz-option-input" alignment="CENTER_RIGHT" HBox.hgrow="ALWAYS" spacing="5"/>
 
-		<ExtButton fx:id="moveUpButton" accelerator="Up" styleClass="quiz-option-move-up, left-pill">
+		<ExtButton fx:id="moveUpButton" accelerator="UP" styleClass="quiz-option-move-up, left-pill">
 			<tooltip>
 				<Tooltip text="%quiz.option.up.tooltip" />
 			</tooltip>
@@ -17,7 +17,7 @@
 				<SvgIcon styleClass="icon, move-up-icon"/>
 			</graphic>
 		</ExtButton>
-		<ExtButton fx:id="moveDownButton" accelerator="Down" styleClass="quiz-option-move-down, center-pill">
+		<ExtButton fx:id="moveDownButton" accelerator="DOWN" styleClass="quiz-option-move-down, center-pill">
 			<tooltip>
 				<Tooltip text="%quiz.option.down.tooltip" />
 			</tooltip>
