--- a/lect-javafx/src/main/resources/css/waveform.css
+++ b/lect-javafx/src/main/resources/css/waveform.css
@@ -2,4 +2,5 @@
 	-fx-waveform-background: derive(-fx-background, -4%);
 	-fx-waveform-color: #63B3ED;
 	-fx-waveform-center: derive(-fx-waveform-color, 10%);
+	-fx-pref-height: 10em;
 }
