javafx: always render waveform in the UI thread

--- a/lect-javafx/src/main/resources/css/event-timeline.css
+++ b/lect-javafx/src/main/resources/css/event-timeline.css
@@ -2,6 +2,6 @@
 	-fx-event-timeline-background: derive(-fx-background, -4%);
 	-fx-event-timeline-text-color: -fx-mid-text-color;
 	-fx-event-timeline-page-mark-color: -fx-text-inner-color;
-	-fx-event-timeline-page-mark-background: derive(-fx-background, -12%);
+	-fx-event-timeline-page-mark-background: rgba(210, 210, 210, 0.7);
 	-fx-event-timeline-event-mark-color: #FC8181;
 }
