editor: enable deletion of single actions without markers

--- a/lect-editor-fx/src/main/resources/views/main-slides/main-slides.fxml
+++ b/lect-editor-fx/src/main/resources/views/main-slides/main-slides.fxml
@@ -38,15 +38,15 @@
 						<SvgIcon styleClass="noise-reduction-icon" />
 					</graphic>
 				</Tab>
-<!--				<Tab id="events">-->
-<!--					<FxPageEventsView />-->
-<!--					<tooltip>-->
-<!--						<Tooltip text="%slides.page.events" />-->
-<!--					</tooltip>-->
-<!--					<graphic>-->
-<!--						<SvgIcon styleClass="page-events-icon" />-->
-<!--					</graphic>-->
-<!--				</Tab>-->
+				<Tab id="events">
+					<FxPageEventsView />
+					<tooltip>
+						<Tooltip text="%slides.page.events" />
+					</tooltip>
+					<graphic>
+						<SvgIcon styleClass="page-events-icon" />
+					</graphic>
+				</Tab>
 			</TabPane>
 			<SlideView fx:id="slideView" HBox.hgrow="ALWAYS"/>
 		</HBox>
