--- a/lect-presenter-api/src/main/resources/html/message.css
+++ b/lect-presenter-api/src/main/resources/html/message.css
@@ -2,8 +2,8 @@ body {
 	font-family: Helvetica, Sans-Serif;
 	font-size: 1.5em;
 	line-height: 1.4;
-	margin-top: 70px;
-	text-align: center;
+	padding: 0;
+	margin: 0;
 }
 
 .speech-bubble {
