--- a/lect-presenter-api/src/main/resources/html/quiz.css
+++ b/lect-presenter-api/src/main/resources/html/quiz.css
@@ -1,6 +1,8 @@
 body {
 	font-family: Helvetica, Sans-Serif;
 	line-height: 1.4;
+	padding: 0;
+	margin: 0;
 }
 
 ol li,
@@ -11,9 +13,6 @@ ul.options {
 	padding-left: 0;
 }
 
-.chart {
-	padding-top: 370px;
-}
 .chart table {
 	width: 100%;
 	border-collapse: collapse;
