--- a/lect-presenter-api/src/main/resources/html/quiz.css
+++ b/lect-presenter-api/src/main/resources/html/quiz.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Helvetica, Sans-Serif;
+	font-size: 1.2em;
 	line-height: 1.4;
 	padding: 0;
 	margin: 0;
@@ -22,6 +23,6 @@ ul.options {
 	vertical-align: top;
 }
 .chart table td div {
-	max-height: 2.5em;
+	max-height: 2.75em;
 	overflow: hidden;
 }
