--- a/lect-javafx/src/main/resources/css/base.css
+++ b/lect-javafx/src/main/resources/css/base.css
@@ -70,6 +70,16 @@
 
 /*******************************************************************************
  *                                                                             *
+ * Label                                                                        *
+ *                                                                             *
+ ******************************************************************************/
+
+.label.error-label {
+	-fx-text-fill: #DC2626;
+}
+
+/*******************************************************************************
+ *                                                                             *
  * Text styles                                                                 *
  *                                                                             *
  ******************************************************************************/
