--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace.css
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace.css
@@ -14,8 +14,11 @@
 .page-replace .header {
 	-fx-font-weight: bold;
 }
+.page-replace > .content > .replace-options {
+	-fx-padding: 0 0 1.25em 0;
+}
 .page-replace ImageView {
-	-fx-effect: dropshadow( gaussian , rgba(0,0,0,0.5) , 0,0,0,1 );
+	-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 0, 0, 0, 1);
 }
 .page-replace > .content > HBox {
 	-fx-spacing: 5;
@@ -25,4 +28,14 @@
 }
 .page-replace .next-icon {
 	-fx-icon-content: "M 4.9804688 3.5 A 0.50005 0.50005 0 0 0 4.5 4 L 4.5 20 A 0.50005 0.50005 0 0 0 5.3125 20.390625 L 15.3125 12.390625 A 0.50005 0.50005 0 0 0 15.3125 11.609375 L 5.3125 3.609375 A 0.50005 0.50005 0 0 0 4.9804688 3.5 z M 19 4.5 A 0.5 0.5 0 0 0 18.5 5 L 18.5 19 A 0.5 0.5 0 0 0 19 19.5 A 0.5 0.5 0 0 0 19.5 19 L 19.5 5 A 0.5 0.5 0 0 0 19 4.5 z M 5.5 5.0410156 L 14.199219 12 L 5.5 18.958984 L 5.5 5.0410156 z";
+}
+.page-replace .pagecount {
+	-fx-padding: 0.25em;
+}
+.page-replace #allPagesTypeLabel {
+	-fx-text-fill: rgb(63, 63, 63);
+	-fx-padding: 0 0 1em 0;
+}
+.page-replace #currentPageTypeLabel {
+	-fx-text-fill: rgb(63, 63, 63);
 }
