--- a/lect-editor-fx/src/main/resources/views/page-replace/page-replace.fxml
+++ b/lect-editor-fx/src/main/resources/views/page-replace/page-replace.fxml
@@ -1,53 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import org.lecturestudio.javafx.control.ExtRadioButton?>
 <?import org.lecturestudio.javafx.control.SlideView?>
 <?import org.lecturestudio.javafx.control.SvgIcon?>
 <?import org.lecturestudio.javafx.util.TextIntegerFormatter?>
 
-<fx:root styleClass="page-replace" type="StackPane" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
-	<VBox styleClass="content" maxHeight="400" maxWidth="600">
-		<Label styleClass="header" text="%page.replace.title"/>
+<?import javafx.scene.text.TextFlow?>
+<fx:root styleClass="page-replace" type="StackPane" xmlns="http://javafx.com/javafx/17.0.2-ea"
+         xmlns:fx="http://javafx.com/fxml/1">
+    <VBox maxHeight="400" maxWidth="600" styleClass="content">
+        <Label styleClass="header" text="%page.replace.title"/>
+        <FlowPane styleClass="replace-options">
+            <VBox>
+                <fx:define>
+                    <ToggleGroup fx:id="pageSelectionType"/>
+                </fx:define>
+                <ExtRadioButton fx:id="allPagesTypeRadio" mnemonicParsing="false"
+                                text="%page.replace.allPages" toggleGroup="$pageSelectionType">
+                    <tooltip>
+                        <Tooltip text="%page.replace.allPages.info"/>
+                    </tooltip>
+                </ExtRadioButton>
 
-		<HBox VBox.vgrow="ALWAYS">
-			<VBox HBox.hgrow="ALWAYS" prefWidth="300" prefHeight="250">
-				<Label styleClass="header" text="%page.replace.page.new"/>
-				<SlideView fx:id="newPageView" alignment="CENTER" VBox.vgrow="ALWAYS" minWidth="300" prefWidth="300" />
-			</VBox>
-			<VBox HBox.hgrow="ALWAYS" prefWidth="300" prefHeight="250">
-				<Label styleClass="header" text="%page.replace.page.current"/>
-				<SlideView fx:id="currentPageView" alignment="CENTER" VBox.vgrow="ALWAYS" minWidth="300" prefWidth="300" />
-			</VBox>
-		</HBox>
+                <TextFlow>
+                    <Label fx:id="allPagesTypeLabel" text="%page.replace.allPages.info"
+                           wrapText="true">
+                        <tooltip>
+                            <Tooltip text="%page.replace.allPages.info"/>
+                        </tooltip>
+                    </Label>
+                </TextFlow>
 
-		<HBox fx:id="controlsContainer">
-			<Button fx:id="prevPageButton" >
-				<tooltip>
-					<Tooltip text="%page.replace.previous" />
-				</tooltip>
-				<graphic>
-					<SvgIcon styleClass="prev-icon"/>
-				</graphic>
-			</Button>
-			<TextField fx:id="pageNumberField" prefColumnCount="3">
-				<textFormatter>
-					<TextIntegerFormatter/>
-				</textFormatter>
-			</TextField>
-			<Button fx:id="nextPageButton">
-				<tooltip>
-					<Tooltip text="%page.replace.next" />
-				</tooltip>
-				<graphic>
-					<SvgIcon styleClass="next-icon"/>
-				</graphic>
-			</Button>
-		</HBox>
+                <ExtRadioButton fx:id="currentPageTypeRadio" mnemonicParsing="false" selected="true"
+                                text="%page.replace.currentPage" toggleGroup="$pageSelectionType">
+                    <tooltip>
+                        <Tooltip text="%page.replace.currentPage.info"/>
+                    </tooltip>
+                </ExtRadioButton>
 
-		<HBox styleClass="buttons" alignment="BOTTOM_RIGHT" VBox.vgrow="ALWAYS">
-			<Button fx:id="cancelButton" text="%button.cancel"/>
-			<Button fx:id="replaceButton" text="%page.replace.button" defaultButton="true"/>
-		</HBox>
-	</VBox>
+                <TextFlow>
+                    <Label fx:id="currentPageTypeLabel" text="%page.replace.currentPage.info"
+                           wrapText="true">
+                        <tooltip>
+                            <Tooltip text="%page.replace.currentPage.info"/>
+                        </tooltip>
+                    </Label>
+                </TextFlow>
+
+            </VBox>
+
+        </FlowPane>
+
+        <HBox VBox.vgrow="ALWAYS">
+            <VBox prefHeight="350" prefWidth="300" HBox.hgrow="ALWAYS">
+                <Label styleClass="header" text="%page.replace.page.new"/>
+                <SlideView fx:id="newPageView" alignment="CENTER" minWidth="300" prefWidth="300" VBox.vgrow="ALWAYS"/>
+                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="250.0">
+                    <Button fx:id="prevPageNewDocButton">
+                        <tooltip>
+                            <Tooltip text="%page.replace.previous"/>
+                        </tooltip>
+                        <graphic>
+                            <SvgIcon styleClass="prev-icon"/>
+                        </graphic>
+                    </Button>
+                    <TextField fx:id="pageNumberNewDocField" prefColumnCount="3">
+                        <textFormatter>
+                            <TextIntegerFormatter/>
+                        </textFormatter>
+                    </TextField>
+                    <Label fx:id="totalPagesNewDocLabel" styleClass="pagecount"/>
+                    <Button fx:id="nextPageNewDocButton">
+                        <tooltip>
+                            <Tooltip text="%page.replace.next"/>
+                        </tooltip>
+                        <graphic>
+                            <SvgIcon styleClass="next-icon"/>
+                        </graphic>
+                    </Button>
+                </HBox>
+            </VBox>
+            <VBox prefHeight="350" prefWidth="300" HBox.hgrow="ALWAYS">
+                <Label styleClass="header" text="%page.replace.page.current"/>
+                <SlideView fx:id="currentPageView" alignment="CENTER" minWidth="300" prefWidth="300"
+                           VBox.vgrow="ALWAYS"/>
+                <HBox alignment="CENTER" prefHeight="50.0" prefWidth="200.0">
+                    <Button fx:id="prevPageCurrentDocButton">
+                        <tooltip>
+                            <Tooltip text="%page.replace.previous"/>
+                        </tooltip>
+                        <graphic>
+                            <SvgIcon styleClass="prev-icon"/>
+                        </graphic>
+                    </Button>
+                    <TextField fx:id="pageNumberCurrentDocField" prefColumnCount="3">
+                        <textFormatter>
+                            <TextIntegerFormatter/>
+                        </textFormatter>
+                    </TextField>
+                    <Label fx:id="totalPagesCurrentDocLabel" styleClass="pagecount"/>
+                    <Button fx:id="nextPageCurrentDocButton">
+                        <tooltip>
+                            <Tooltip text="%page.replace.next"/>
+                        </tooltip>
+                        <graphic>
+                            <SvgIcon styleClass="next-icon"/>
+                        </graphic>
+                    </Button>
+                </HBox>
+            </VBox>
+        </HBox>
+
+        <HBox alignment="BOTTOM_RIGHT" styleClass="buttons" VBox.vgrow="ALWAYS">
+            <Button fx:id="abortButton" text="%page.replace.abort"/>
+            <Button fx:id="replaceButton" text="%page.replace.button"/>
+            <Button fx:id="confirmButton" defaultButton="true" text="%page.replace.confirm"/>
+        </HBox>
+    </VBox>
 </fx:root>
