editor-api: added feature and tests to split recordings #2
editor-fx: added new views

core: added a new method to PresenterTest, added copy constructor to Recording

--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls.fxml
@@ -62,10 +62,18 @@
 			</Button>
 			<Button fx:id="importRecordingButton">
 				<tooltip>
-					<Tooltip text="%media.import.recording" />
+					<Tooltip text="%media.import.recording"/>
 				</tooltip>
 				<graphic>
 					<SvgIcon styleClass="import-recording-icon"/>
+				</graphic>
+			</Button>
+			<Button fx:id="splitAndSaveRecordingButton">
+				<tooltip>
+					<Tooltip text="%media.split.recording"/>
+				</tooltip>
+				<graphic>
+					<SvgIcon styleClass="split-recording-icon"/>
 				</graphic>
 			</Button>
 		</buttons>
